<resources>
    <string name="app_name">MyAppQBO</string>
    <string name="val_etUsuario">Ingrese su usuario</string>
    <string name="val_etPassword">Ingrese su password</string>
    <string name="val_btnAceptar">INGRESAR</string>
    <string name="val_etNombre">Ingrese su nombre</string>
    <string name="val_etGenero">Seleccione su genero:</string>
    <string name="val_rbtMasculino">Masculino</string>
    <string name="val_rbtFemenino">Femenino</string>
    <string name="val_etPreferencias">Selecciones sus Preferencias:</string>
    <string name="val_chkDeporte">Deporte</string>
    <string name="val_chkDibujo">Dibujo</string>
    <string name="val_chkOtros">Otras preferencias</string>
    <string name="val_btnRegistrar">Registrar Contacto</string>
    <string name="val_btnListar">Listar Contactos</string>
</resources>